FIxed Test alignment for home

--- a/public/css/coreStyles.css
+++ b/public/css/coreStyles.css
@@ -100,6 +100,7 @@ li a:hover {
 }
 
 .col33{
+	text-align: center;
 	float: left;
 	width: 33%;
 }
